# eefunction_py

./: LICENSE  README.md  pyproject.toml
src/eefunction/: property.py
